--- a/index.html
+++ b/index.html
@@ -32,27 +32,33 @@
           </div>
           <div class="top-right">
             <div class="rates">
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
+              <div class="stars">
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+              </div>
               <p>Rated 5 Stars in Reviews</p>
             </div>
             <div class="rates">
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
+              <div class="stars">
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+              </div>
               <p>Rated 5 Stars in Report Guru</p>
             </div>
             <div class="rates">
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
-              <img src="images/icon-star.svg" alt="" />
+              <div class="stars">
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+                <img src="images/icon-star.svg" alt="" />
+              </div>
               <p>Rated 5 Stars in BestTech</p>
             </div>
           </div>
@@ -72,7 +78,7 @@
               received it in time. Excellent!"
             </p>
           </div>
-          <div class="customer">
+          <div class="customer second">
             <div class="customer-name">
               <img class="customer-img" src="images/image-irene.jpg" alt="" />
               <div>
@@ -86,7 +92,7 @@
               speed of delivery."
             </p>
           </div>
-          <div class="customer">
+          <div class="customer third">
             <div class="customer-name">
               <img class="customer-img" src="images/image-anne.jpg" alt="" />
               <div>
